# winnow

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
adapters/frigate/: .env.example  analyze.py  build_candidates.py  classify.py  commit.py  daemon.py  extract.py  frigate_client.py  promote.py  refresh.py  report.py  vlm.py
deploy/: README.md  clear_and_refresh.sh  deploy.sh
docs/: ROADMAP.md  SETUP.md  TENETS.md  community-post.md  flows.md
docs/adr/: 0001-model-assisted-human-curation.md  0002-perception-vs-labeling-split.md  0003-verdicts-as-source-of-truth.md  0004-companion-not-fork.md  0005-auth-on-as-primary-target.md  0006-diversity-and-hard-negatives.md  0007-always-ready-daemon.md  0008-binary-sweep-manual-mode.md  0009-full-scene-from-frigate-snapshot.md  0010-one-best-frame-per-event.md  0011-reassign-and-subtype-creation.md  0012-source-agnostic-core-frigate-first.md  0013-user-triggered-commit.md  0014-verdict-model-reassign-first-class.md  0015-event-level-review-and-keepset.md  0016-library-curation.md  0017-rescan-recordings.md  0018-the-curation-spectrum.md  README.md  _template.md
eval/: README.md  diversity_sample.py  rescan_recordings.py  score_model.py  split_holdout.py  trim_face_library.py
tests/: test_winnow.py
tests/e2e/: README.md  conftest.py  requirements-dev.txt  test_ui_smoke.py
winnow/: review_app.py
