# Winnow is Docker-first and zero-dependency at runtime (stdlib http.server +
# vanilla JS). This file carries project metadata and tooling config; a proper
# PyPI split (winnow-core + winnow-<source>) is on the roadmap (see docs/ROADMAP.md).
[project]
name = "winnow-core"
version = "0.1.0"
description = "A swipe-to-curate companion for Frigate NVR — confirm/reassign/reject classification and face candidates and commit clean training data back via the API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Charles Marshall" }]
keywords = ["frigate", "nvr", "machine-learning", "training-data", "curation", "self-hosted"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Video",
  "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = []  # runtime is stdlib-only

[project.urls]
Homepage = "https://github.com/csmarshall/winnow"
Issues = "https://github.com/csmarshall/winnow/issues"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
